--- a/src/common/header/header.njk
+++ b/src/common/header/header.njk
@@ -1,15 +1,17 @@
-<div class="header">
-    <div class="headerHome">Kevin Oliveira</div>
-    <div class="headerLinks">
-        {% if hideHome %}
-        {% else %}
-          <a href="/">Home</a>
-        {% endif %}
-        <!-- <a href="/artlets.html">Artlets</a>
-        <a href="/projects.html">Projects</a>
-        <a href="/blog.html">Blog</a>
-        <a href="/about.html">About Me</a>
-        <a href="/404.html">404</a> -->
-    	<a onclick="toogleCurrentTheme()">Switch Theme</a>
-    </div>
+<div class="headerWrapper">
+	<div class="header">
+		<div class="headerHome">Kevin Oliveira</div>
+		<div class="headerLinks">
+			{% if hideHome %}
+			{% else %}
+				<a href="/">Home</a>
+			{% endif %}
+			<!-- <a href="/artlets.html">Artlets</a>
+			<a href="/projects.html">Projects</a>
+			<a href="/blog.html">Blog</a>
+			<a href="/about.html">About Me</a>
+			<a href="/404.html">404</a> -->
+			<a onclick="toogleCurrentTheme()">Switch Theme</a>
+		</div>
+	</div>
 </div>
