--- a/src/common/header/header.njk
+++ b/src/common/header/header.njk
@@ -1,17 +1,82 @@
 <div class="headerWrapper">
 	<div class="header">
-		<div class="headerHome">Kevin Oliveira</div>
+		<div class="headerHome">
+			<a href="/">Kevin Oliveira</a>
+		</div>
 		<div class="headerLinks">
-			{% if hideHome %}
+			{# {% if hideHome %}
 			{% else %}
 				<a href="/">Home</a>
-			{% endif %}
+			{% endif %} #}
 			<!-- <a href="/artlets.html">Artlets</a>
 			<a href="/projects.html">Projects</a>
 			<a href="/blog.html">Blog</a>
 			<a href="/about.html">About Me</a>
 			<a href="/404.html">404</a> -->
-			<a onclick="toogleCurrentTheme()">Switch Theme</a>
+			{# <a onclick="toogleCurrentTheme()">Theme</a> #}
+			<a onclick="toogleCurrentTheme()">
+				<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 307.2 307.2" style="enable-background:new 0 0 307.2 307.2;" xml:space="preserve">
+					<g>
+						<g>
+							<path d="M153.6,85.333c-37.703,0-68.267,30.564-68.267,68.267s30.564,68.267,68.267,68.267s68.267-30.564,68.267-68.267
+			S191.303,85.333,153.6,85.333z M153.6,187.733c-18.851,0-34.133-15.282-34.133-34.133c0-18.851,15.282-34.133,34.133-34.133
+			c18.851,0,34.133,15.282,34.133,34.133C187.733,172.451,172.451,187.733,153.6,187.733z"/>
+						</g>
+					</g>
+					<g>
+						<g>
+							<path d="M153.6,0c-9.426,0-17.067,7.641-17.067,17.067v17.067c0,9.426,7.641,17.067,17.067,17.067s17.067-7.641,17.067-17.067
+			V17.067C170.667,7.641,163.026,0,153.6,0z"/>
+						</g>
+					</g>
+					<g>
+						<g>
+							<path d="M153.6,256c-9.426,0-17.067,7.641-17.067,17.067v17.067c0,9.426,7.641,17.067,17.067,17.067s17.067-7.641,17.067-17.067
+			v-17.067C170.667,263.641,163.026,256,153.6,256z"/>
+						</g>
+					</g>
+					<g>
+						<g>
+							<path d="M290.133,136.533h-17.067c-9.426,0-17.067,7.641-17.067,17.067s7.641,17.067,17.067,17.067h17.067
+			c9.426,0,17.067-7.641,17.067-17.067S299.559,136.533,290.133,136.533z"/>
+						</g>
+					</g>
+					<g>
+						<g>
+							<path d="M34.133,136.533H17.067C7.641,136.533,0,144.174,0,153.6s7.641,17.067,17.067,17.067h17.067
+			c9.426,0,17.067-7.641,17.067-17.067S43.559,136.533,34.133,136.533z"/>
+						</g>
+					</g>
+					<g>
+						<g>
+							<path d="M261.793,44.988c-6.614-6.388-17.099-6.388-23.713,0l-12.066,12.066c-6.78,6.548-6.968,17.353-0.419,24.132
+			c6.548,6.78,17.352,6.968,24.132,0.419c0.142-0.137,0.282-0.277,0.419-0.419l12.066-12.066
+			C268.76,62.34,268.573,51.536,261.793,44.988z"/>
+						</g>
+					</g>
+					<g>
+						<g>
+							<path d="M81.606,226.014c-6.548-6.78-17.353-6.968-24.132-0.419c-0.142,0.137-0.282,0.277-0.419,0.419L44.988,238.08
+			c-6.78,6.548-6.968,17.352-0.419,24.132c6.548,6.78,17.353,6.968,24.132,0.419c0.142-0.137,0.282-0.277,0.419-0.419l12.066-12.066
+			C87.966,243.598,88.154,232.794,81.606,226.014z"/>
+						</g>
+					</g>
+					<g>
+						<g>
+							<path d="M262.212,238.08l-12.066-12.066c-6.664-6.662-17.468-6.662-24.132,0c-6.662,6.665-6.662,17.468,0,24.132l12.066,12.066
+			c6.78,6.548,17.584,6.36,24.132-0.42C268.6,255.179,268.6,244.694,262.212,238.08z"/>
+						</g>
+					</g>
+					<g>
+						<g>
+							<path d="M81.606,57.473c-0.137-0.142-0.277-0.282-0.419-0.419L69.12,44.988c-6.78-6.548-17.584-6.361-24.132,0.419
+			c-6.388,6.614-6.388,17.1,0,23.713l12.066,12.066c6.548,6.78,17.353,6.968,24.132,0.419
+			C87.966,75.057,88.154,64.253,81.606,57.473z"/>
+						</g>
+					</g>
+				</svg>
+			</a>
 		</div>
 	</div>
 </div>
