theme-color and home link

--- a/src/pages/home/home.njk
+++ b/src/pages/home/home.njk
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <title>Kevin Oliveira</title>
-  </head>
-  <body>
-    {% include "common/header/header.njk" %}
-    {% include "common/home-banner/home-banner.njk" %}
-    {% include "common/post-links/post-links.njk" %}
-  </body>
-    {% include "common/theme/theme.njk" %}
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="index.css">
+		<meta name="theme-color" content="#202020">
+		<title>Kevin Oliveira</title>
+	</head>
+	<body>
+		{% include "common/header/header.njk" %}
+		{% include "common/home-banner/home-banner.njk" %}
+		{% include "common/post-links/post-links.njk" %}
+	</body>
+	{% include "common/theme/theme.njk" %}
 </html>
