--- a/src/common/header/header.njk
+++ b/src/common/header/header.njk
@@ -15,13 +15,13 @@
 			<a href="/404.html">404</a> -->
 			{# <a onclick="toogleCurrentTheme()">Theme</a> #}
 			<a onclick="toogleCurrentTheme()">
+				<?xml version="1.0" encoding="iso-8859-1"?>
+				<!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 				<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 307.2 307.2" style="enable-background:new 0 0 307.2 307.2;" xml:space="preserve">
 					<g>
 						<g>
-							<path d="M153.6,85.333c-37.703,0-68.267,30.564-68.267,68.267s30.564,68.267,68.267,68.267s68.267-30.564,68.267-68.267
-			S191.303,85.333,153.6,85.333z M153.6,187.733c-18.851,0-34.133-15.282-34.133-34.133c0-18.851,15.282-34.133,34.133-34.133
-			c18.851,0,34.133,15.282,34.133,34.133C187.733,172.451,172.451,187.733,153.6,187.733z"/>
+							<circle cx="153.6" cy="153.6" r="68.267"/>
 						</g>
 					</g>
 					<g>
@@ -50,9 +50,9 @@
 					</g>
 					<g>
 						<g>
-							<path d="M261.793,44.988c-6.614-6.388-17.099-6.388-23.713,0l-12.066,12.066c-6.78,6.548-6.968,17.353-0.419,24.132
-			c6.548,6.78,17.352,6.968,24.132,0.419c0.142-0.137,0.282-0.277,0.419-0.419l12.066-12.066
-			C268.76,62.34,268.573,51.536,261.793,44.988z"/>
+							<path d="M261.794,44.988c-6.614-6.388-17.1-6.388-23.714,0l-12.066,12.066c-6.664,6.666-6.662,17.472,0.004,24.136
+			c3.2,3.199,7.538,4.996,12.063,4.997c4.526-0.001,8.866-1.8,12.066-5.001l12.066-12.066
+			C268.761,62.34,268.573,51.536,261.794,44.988z"/>
 						</g>
 					</g>
 					<g>
@@ -64,15 +64,15 @@
 					</g>
 					<g>
 						<g>
-							<path d="M262.212,238.08l-12.066-12.066c-6.664-6.662-17.468-6.662-24.132,0c-6.662,6.665-6.662,17.468,0,24.132l12.066,12.066
+							<path d="M262.212,238.08l-12.066-12.066c-6.78-6.548-17.584-6.36-24.132,0.42c-6.387,6.614-6.387,17.099,0,23.712l12.066,12.066
 			c6.78,6.548,17.584,6.36,24.132-0.42C268.6,255.179,268.6,244.694,262.212,238.08z"/>
 						</g>
 					</g>
 					<g>
 						<g>
-							<path d="M81.606,57.473c-0.137-0.142-0.277-0.282-0.419-0.419L69.12,44.988c-6.78-6.548-17.584-6.361-24.132,0.419
-			c-6.388,6.614-6.388,17.1,0,23.713l12.066,12.066c6.548,6.78,17.353,6.968,24.132,0.419
-			C87.966,75.057,88.154,64.253,81.606,57.473z"/>
+							<path d="M81.606,57.474c-0.138-0.142-0.278-0.282-0.42-0.42L69.12,44.988c-6.78-6.548-17.584-6.36-24.132,0.419
+			c-6.388,6.614-6.388,17.099,0,23.713l12.066,12.066c6.548,6.78,17.352,6.968,24.132,0.42
+			C87.966,75.058,88.154,64.254,81.606,57.474z"/>
 						</g>
 					</g>
 				</svg>
