--- a/src/pages/404/404.njk
+++ b/src/pages/404/404.njk
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="404.css">
-    <title>{{title}}</title>
-  </head>
-  <body>
-    {% include "common/header/header.njk" %}
-    <div class="message">{{message}}<div>
-  </body>
-    {% include "common/theme/theme.njk" %}
-</html>
+	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="404.css">
+		<meta name="theme-color" content="#202020">
+		<title>{{title}}</title>
+	</head>
+	<body>
+		{% include "common/header/header.njk" %}
+		<div class="message">{{message}}
+			<div></body>
+			{% include "common/theme/theme.njk" %}
+		</html>
