--- a/blog.css
+++ b/blog.css
@@ -16,6 +16,7 @@
   --darker: black; }
 
 .headerWrapper {
+  all: unset;
   display: flex;
   justify-content: center; }
   .headerWrapper .header {
