--- a/blog.css
+++ b/blog.css
@@ -144,7 +144,8 @@
       .bannerLink .banner .post .postTitle {
         font-weight: 900;
         font-size: 40px;
-        animation: fadeIn 1s ease normal; }
+        animation: fadeIn 1s ease normal;
+        color: var(--darker); }
       .bannerLink .banner .post .description {
         padding-top: 5px;
         font-size: 20px;
