--- a/src/common/post-links/post-link.scss
+++ b/src/common/post-links/post-link.scss
@@ -48,6 +48,7 @@
 						font-size: 25px;
 					}
 					font-size: 2vw;
+					color: $darker;
 					// animation: fadeIn 2.5s ease normal;
 				}
 				.description {
