--- a/src/common/header/header.njk
+++ b/src/common/header/header.njk
@@ -14,6 +14,7 @@
 			<a href="/about.html">About Me</a>
 			<a href="/404.html">404</a> -->
 			{# <a onclick="toogleCurrentTheme()">Theme</a> #}
+			<a href="https://github.com/kevinoliveira/" target="_blank">Github</a>
 			<a onclick="toogleCurrentTheme()">
 				<?xml version="1.0" encoding="iso-8859-1"?>
 				<!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
