--- a/src/pages/post/post.njk
+++ b/src/pages/post/post.njk
@@ -13,6 +13,7 @@
 		<div class="articleWrapper">
 			<article>
 				<h1>{{title}}</h1>
+                <div class="date">{{date}}</div>
 				{% set content = rawHtml %}
 				{{ content | safe}}
 			</article>
